changed EndTurn button to have bigger font and some margin

--- a/Hextasy.CardWars/CardWarsGameView.xaml
+++ b/Hextasy.CardWars/CardWarsGameView.xaml
@@ -48,7 +48,7 @@
           </DataTemplate>
         </ListBox.ItemTemplate>
       </ListBox>
-      <Button Grid.Row="2" Content="End Turn" 
+      <Button Grid.Row="2" Content="End Turn" FontSize="20" Margin="10" 
               cal:Message.Attach="[Event Click] = [Action EndTurn()]"/>
     </Grid>
 
