--- a/Hextasy.CardWars/CardControl.xaml
+++ b/Hextasy.CardWars/CardControl.xaml
@@ -26,28 +26,22 @@
         <RowDefinition Height="*"/>
         <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
-      <Viewbox StretchDirection="Both" Stretch="Uniform">
-        <Grid>
-          <Image Source="Images\diamond-full.png"/>
-          
-          <Viewbox Margin="2, 0, 2, 20" StretchDirection="Both" Stretch="Uniform">
-            <Border CornerRadius="10" Width="15" Height="10" Background="White" 
+      <Grid>
+        <Image Margin="0,3,0,-3" Source="Images\diamond-full.png"/>
+        <Border CornerRadius="15" Width="30" Height="30" Background="White" 
                     HorizontalAlignment="Center" VerticalAlignment="Center">
-              <Border.OpacityMask>
-                <RadialGradientBrush Center="0.5,0.5">
-                  <GradientStop Color="#00000000" Offset="1" />
-                  <GradientStop Color="#20000000" Offset="0.9" />
-                  <GradientStop Color="#FF000000" Offset="0" />
-                </RadialGradientBrush>
-              </Border.OpacityMask>
-            </Border>
-          </Viewbox>
-          <Viewbox Margin="0, -4, 0, 18" StretchDirection="Both" Stretch="Uniform">
-            <TextBlock Text="9" Foreground="Black" FontWeight="Bold" 
+          <Border.OpacityMask>
+            <RadialGradientBrush Center="0.5,0.5">
+              <GradientStop Color="#00000000" Offset="1" />
+              <GradientStop Color="#20000000" Offset="0.9" />
+              <GradientStop Color="#EE000000" Offset="0.4" />
+              <GradientStop Color="#FF000000" Offset="0" />
+            </RadialGradientBrush>
+          </Border.OpacityMask>
+        </Border>
+        <TextBlock Text="{Binding Cost}" Foreground="Black" FontWeight="Bold" FontSize="23"
                      HorizontalAlignment="Center" VerticalAlignment="Center"/>
-          </Viewbox>
-        </Grid>
-      </Viewbox>
+      </Grid>
     </Grid>
     <Image Grid.Column="1" Grid.Row="0" Source="{Binding ImageSource}"/>
     <Grid Grid.Column="2">
@@ -58,31 +52,40 @@
       <TextBlock Grid.Row="0" Text="{Binding Name}" FontWeight="Bold"/>
       <TextBlock Grid.Row="1" Text="{Binding Description}" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"/>
     </Grid>
+    
     <Grid Grid.Column="3">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="*"/>
-        <RowDefinition Height="Auto"/>
-      </Grid.RowDefinitions>
-      <Viewbox Margin="2" StretchDirection="Both" Stretch="Uniform">
-        <Border Width="26" Height="26" Margin="1" BorderBrush="Black" BorderThickness="2" CornerRadius="13" Background="LightBlue">
-          <TextBlock Margin="1" Text="{Binding BaseHealth}" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-        </Border>
-      </Viewbox>
-      <TextBlock Grid.Row="1" FontSize="12" Margin="1,-3,1,2" Text="ATK" HorizontalAlignment="Center"/>
+      <Image Margin="7" Source="Images\attack.png"/>
+      <Border CornerRadius="15" Width="30" Height="30" Background="White" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Border.OpacityMask>
+          <RadialGradientBrush Center="0.5,0.5">
+            <GradientStop Color="#00000000" Offset="1" />
+            <GradientStop Color="#20000000" Offset="0.9" />
+            <GradientStop Color="#EE000000" Offset="0.4" />
+            <GradientStop Color="#FF000000" Offset="0" />
+          </RadialGradientBrush>
+        </Border.OpacityMask>
+      </Border>
+      <TextBlock Text="{Binding BaseAttack}" Foreground="Black" FontWeight="Bold" FontSize="23"
+                     HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
 
     <Grid Grid.Column="4">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="*"/>
-        <RowDefinition Height="Auto"/>
-      </Grid.RowDefinitions>
-      <Viewbox Margin="2" StretchDirection="Both" Stretch="Uniform">
-        <Border Width="26" Height="26" Margin="1" BorderBrush="Black" BorderThickness="2" CornerRadius="13" Background="PaleVioletRed">
-          <TextBlock Margin="1" Text="{Binding BaseHealth}" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-        </Border>
-      </Viewbox>
-      <TextBlock Grid.Row="1" FontSize="12" Margin="1,-3,1,2" Text="HP" HorizontalAlignment="Center"/>
+      <Image Margin="0,4,0,0" Source="Images\blooddrop.png"/>
+      <Border CornerRadius="15" Width="30" Height="30" Background="White" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Border.OpacityMask>
+          <RadialGradientBrush Center="0.5,0.5">
+            <GradientStop Color="#00000000" Offset="1" />
+            <GradientStop Color="#20000000" Offset="0.9" />
+            <GradientStop Color="#EE000000" Offset="0.4" />
+            <GradientStop Color="#FF000000" Offset="0" />
+          </RadialGradientBrush>
+        </Border.OpacityMask>
+      </Border>
+      <TextBlock Text="{Binding BaseHealth}" Foreground="Black" FontWeight="Bold" FontSize="23"
+                     HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
-    
+
   </Grid>
 </UserControl>
