--- a/Hextasy.CardWars/DataTemplates.xaml
+++ b/Hextasy.CardWars/DataTemplates.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:cardWars="clr-namespace:Hextasy.CardWars"
-                    xmlns:cal="http://www.caliburnproject.org">
+                    xmlns:cal="http://www.caliburnproject.org"
+                    xmlns:cards="clr-namespace:Hextasy.CardWars.Cards">
 
   <ResourceDictionary.MergedDictionaries>
     <ResourceDictionary Source="Styles.xaml"/>
@@ -24,6 +25,14 @@
         </ToolTip>
       </Button.ToolTip>
     </Button>
+  </DataTemplate>
+
+  <DataTemplate DataType="{x:Type cards:MonsterCard}">
+    <cardWars:CardControl/>
+  </DataTemplate>
+
+  <DataTemplate DataType="{x:Type cards:SpellCard}">
+    <cardWars:SpellControl/>
   </DataTemplate>
 
 </ResourceDictionary>
