--- a/Hextasy.CardWars/SpellControl.xaml
+++ b/Hextasy.CardWars/SpellControl.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="Hextasy.CardWars.CardControl"
+﻿<UserControl x:Class="Hextasy.CardWars.SpellControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             Height="50"
              d:DesignHeight="50" d:DesignWidth="250">
   <UserControl.Resources>
     <ResourceDictionary>
@@ -13,6 +12,7 @@
       </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
   </UserControl.Resources>
+  
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="55"/>
@@ -43,7 +43,9 @@
                      HorizontalAlignment="Center" VerticalAlignment="Center"/>
       </Grid>
     </Grid>
-    <Image Grid.Column="1" Grid.Row="0" Source="{Binding ImageSource}"/>
+    <Border Grid.Column="1" Grid.Row="0" Margin="7" BorderBrush="Black" BorderThickness="2" CornerRadius="8">
+      <Image Source="{Binding ImageSource}" Stretch="Fill"/>
+    </Border>
     <Grid Grid.Column="2">
       <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
@@ -52,40 +54,6 @@
       <TextBlock Grid.Row="0" Text="{Binding Name}" FontWeight="Bold"/>
       <TextBlock Grid.Row="1" Text="{Binding Description}" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"/>
     </Grid>
-    
-    <Grid Grid.Column="3">
-      <Image Margin="7" Source="Images\attack.png"/>
-      <Border CornerRadius="15" Width="30" Height="30" Background="White" 
-                    HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Border.OpacityMask>
-          <RadialGradientBrush Center="0.5,0.5">
-            <GradientStop Color="#00000000" Offset="1" />
-            <GradientStop Color="#20000000" Offset="0.9" />
-            <GradientStop Color="#EE000000" Offset="0.4" />
-            <GradientStop Color="#FF000000" Offset="0" />
-          </RadialGradientBrush>
-        </Border.OpacityMask>
-      </Border>
-      <TextBlock Text="{Binding BaseAttack}" Foreground="Black" FontWeight="Bold" FontSize="23"
-                     HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    </Grid>
-
-    <Grid Grid.Column="4">
-      <Image Margin="0,4,0,0" Source="Images\blooddrop.png"/>
-      <Border CornerRadius="15" Width="30" Height="30" Background="White" 
-                    HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Border.OpacityMask>
-          <RadialGradientBrush Center="0.5,0.5">
-            <GradientStop Color="#00000000" Offset="1" />
-            <GradientStop Color="#20000000" Offset="0.9" />
-            <GradientStop Color="#EE000000" Offset="0.4" />
-            <GradientStop Color="#FF000000" Offset="0" />
-          </RadialGradientBrush>
-        </Border.OpacityMask>
-      </Border>
-      <TextBlock Text="{Binding BaseHealth}" Foreground="Black" FontWeight="Bold" FontSize="23"
-                     HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    </Grid>
-
   </Grid>
+  
 </UserControl>
