--- a/Hextasy.CardWars/Storyboards.xaml
+++ b/Hextasy.CardWars/Storyboards.xaml
@@ -1,6 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   
+  <Storyboard x:Key="AttackStoryboard" RepeatBehavior="Forever">
+    <DoubleAnimation Storyboard.TargetName="Attack"
+                       Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
+                       From="1" To="1.1" Duration="0:0:1" >
+      <DoubleAnimation.EasingFunction>
+        <ElasticEase Oscillations="3" EasingMode="EaseOut"/>
+      </DoubleAnimation.EasingFunction>
+    </DoubleAnimation>
+    <DoubleAnimation Storyboard.TargetName="Attack"
+                       Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleY)"
+                       From="1" To="1.1" Duration="0:0:1" >
+      <DoubleAnimation.EasingFunction>
+        <ElasticEase Oscillations="3" EasingMode="EaseOut"/>
+      </DoubleAnimation.EasingFunction>
+    </DoubleAnimation>
+  </Storyboard>
+
   <Storyboard x:Key="CrosshairStoryboard" RepeatBehavior="Forever">
     <DoubleAnimation Storyboard.TargetName="Crosshair"
                        Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
