--- a/Hextasy.CardWars/CardWarsSettingsView.xaml
+++ b/Hextasy.CardWars/CardWarsSettingsView.xaml
@@ -22,20 +22,20 @@
     </Grid.ColumnDefinitions>
 
     <TextBlock Grid.Row="0" Grid.Column="0" Text="Number of rows: "/>
-    <TextBlock Grid.Row="1" Grid.Column="0"  Text="Number of columns: "/>
-    <TextBlock Grid.Row="2" Grid.Column="0"  Text="Player 1 name: "/>
-    <TextBlock Grid.Row="3" Grid.Column="0"  Text="Player 1 deck: "/>
-    <TextBlock Grid.Row="4" Grid.Column="0"  Text="Player 2 name: "/>
-    <TextBlock Grid.Row="5" Grid.Column="0"  Text="Player 2 deck: "/>
+    <TextBlock Grid.Row="1" Grid.Column="0" Text="Number of columns: "/>
+    <TextBlock Grid.Row="2" Grid.Column="0" Text="Player 1 name: "/>
+    <TextBlock Grid.Row="3" Grid.Column="0" Text="Player 1 deck: "/>
+    <TextBlock Grid.Row="4" Grid.Column="0" Text="Player 2 name: "/>
+    <TextBlock Grid.Row="5" Grid.Column="0" Text="Player 2 deck: "/>
     
     <Slider Grid.Row="0" Grid.Column="1" Minimum="4" Maximum="12" Value="{Binding Rows}"/>
     <Slider Grid.Row="1" Grid.Column="1" Minimum="4" Maximum="15" Value="{Binding Columns}"/>
     <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Player1}"/>
     <ComboBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"  DisplayMemberPath="Name"
-              ItemsSource="{Binding Decks}" SelectedItem="{Binding Player1Deck}"/>
+              ItemsSource="{Binding Player1Decks}" SelectedItem="{Binding Player1Deck}"/>
     <TextBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Player2}"/>
     <ComboBox Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" DisplayMemberPath="Name"
-              ItemsSource="{Binding Decks}" SelectedItem="{Binding Player2Deck}"/>
+              ItemsSource="{Binding Player2Decks}" SelectedItem="{Binding Player2Deck}"/>
 
     <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Rows}"/>
     <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding Columns}"/>
