added style to gray out enemies that are not valid targets

--- a/Hextasy.CardWars/Converters.xaml
+++ b/Hextasy.CardWars/Converters.xaml
@@ -4,5 +4,6 @@
                     xmlns:cardWars="clr-namespace:Hextasy.CardWars">
 
   <framework:DoubleMultiplierConverter x:Key="DoubleMultiplierConverter" />
+  <framework:IsNullConverter x:Key="IsNullConverter"/>
   <cardWars:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
 </ResourceDictionary>
